TP2-git/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    STRING

Grammar

Rule 0     S' -> Comandos
Rule 1     Comandos -> Comando
Rule 2     Comandos -> Comandos Comando
Rule 3     Comando -> ExprR
Rule 4     Comando -> Declaracao
Rule 5     Comando -> Atribuicao
Rule 6     Comando -> Atribuicao NEWLINE
Rule 7     Comando -> IFELSE
Rule 8     Comando -> ONLYIF
Rule 9     Comando -> FORDO
Rule 10    Comando -> FUNC
Rule 11    Comando -> PRINTER
Rule 12    Comando -> SCANNER
Rule 13    Factor -> num
Rule 14    Factor -> - num
Rule 15    Factor -> id
Rule 16    Factor -> TRUE
Rule 17    Factor -> FALSE
Rule 18    Factor -> ( ExprR )
Rule 19    ExprR -> Expr < Expr
Rule 20    ExprR -> Expr > Expr
Rule 21    ExprR -> Expr < = Expr
Rule 22    ExprR -> Expr > = Expr
Rule 23    ExprR -> Expr EQUALS Expr
Rule 24    ExprR -> Expr NOTEQUALS Expr
Rule 25    Termo -> Termo E Factor
Rule 26    Expr -> Expr OU Termo
Rule 27    ExprR -> Expr
Rule 28    Expr -> Termo
Rule 29    Expr -> Expr + Termo
Rule 30    Expr -> Expr - Termo
Rule 31    Expr -> Termo * Factor
Rule 32    Expr -> Termo / Factor
Rule 33    Termo -> Factor
Rule 34    Declaracao -> INT id
Rule 35    Atribuicao -> id = ExprR
Rule 36    Atribuicoes -> Atribuicao
Rule 37    Atribuicoes -> Atribuicao NEWLINE
Rule 38    Atribuicoes -> Atribuicoes Atribuicao
Rule 39    Atribuicoes -> Atribuicoes NEWLINE Atribuicao
Rule 40    Atribuicoes -> IFELSE
Rule 41    Atribuicao -> ONLYIF
Rule 42    Atribuicao -> FORDO
Rule 43    Atribuicao -> PRINTER
Rule 44    Atribuicao -> SCANNER
Rule 45    IFELSE -> IF ( ExprR ) { Atribuicoes } ELSE { Atribuicoes }
Rule 46    ONLYIF -> IF ( ExprR ) { Atribuicoes }
Rule 47    FORDO -> FOR ( Atribuicao , ExprR ) DO { Atribuicoes }
Rule 48    ARGS -> ARG
Rule 49    ARG -> <empty>
Rule 50    ARG -> id
Rule 51    ARGS -> ARGS , ARG
Rule 52    FUNC -> NOME ( ARGS ) { Atribuicoes }
Rule 53    FUNC -> NOME ( ARGS ) { NEWLINE Atribuicoes NEWLINE }
Rule 54    TEXTO -> TEXT
Rule 55    PRINTER -> PRINT ( TEXTO )
Rule 56    PRINTER -> PRINT ( id )
Rule 57    SCANNER -> SCAN ( id )

Terminals, with rules where they appear

(                    : 18 45 46 47 52 53 55 56 57
)                    : 18 45 46 47 52 53 55 56 57
*                    : 31
+                    : 29
,                    : 47 51
-                    : 14 30
/                    : 32
<                    : 19 21
=                    : 21 22 35
>                    : 20 22
DO                   : 47
E                    : 25
ELSE                 : 45
EQUALS               : 23
FALSE                : 17
FOR                  : 47
IF                   : 45 46
INT                  : 34
NEWLINE              : 6 37 39 53 53
NOME                 : 52 53
NOTEQUALS            : 24
OU                   : 26
PRINT                : 55 56
SCAN                 : 57
STRING               : 
TEXT                 : 54
TRUE                 : 16
error                : 
id                   : 15 34 35 50 56 57
num                  : 13 14
{                    : 45 45 46 47 52 53
}                    : 45 45 46 47 52 53

Nonterminals, with rules where they appear

ARG                  : 48 51
ARGS                 : 51 52 53
Atribuicao           : 5 6 36 37 38 39 47
Atribuicoes          : 38 39 45 45 46 47 52 53
Comando              : 1 2
Comandos             : 2 0
Declaracao           : 4
Expr                 : 19 19 20 20 21 21 22 22 23 23 24 24 26 27 29 30
ExprR                : 3 18 35 45 46 47
FORDO                : 9 42
FUNC                 : 10
Factor               : 25 31 32 33
IFELSE               : 7 40
ONLYIF               : 8 41
PRINTER              : 11 43
SCANNER              : 12 44
TEXTO                : 55
Termo                : 25 26 28 29 30 31 32

Parsing method: LALR

state 0

    (0) S' -> . Comandos
    (1) Comandos -> . Comando
    (2) Comandos -> . Comandos Comando
    (3) Comando -> . ExprR
    (4) Comando -> . Declaracao
    (5) Comando -> . Atribuicao
    (6) Comando -> . Atribuicao NEWLINE
    (7) Comando -> . IFELSE
    (8) Comando -> . ONLYIF
    (9) Comando -> . FORDO
    (10) Comando -> . FUNC
    (11) Comando -> . PRINTER
    (12) Comando -> . SCANNER
    (19) ExprR -> . Expr < Expr
    (20) ExprR -> . Expr > Expr
    (21) ExprR -> . Expr < = Expr
    (22) ExprR -> . Expr > = Expr
    (23) ExprR -> . Expr EQUALS Expr
    (24) ExprR -> . Expr NOTEQUALS Expr
    (27) ExprR -> . Expr
    (34) Declaracao -> . INT id
    (35) Atribuicao -> . id = ExprR
    (41) Atribuicao -> . ONLYIF
    (42) Atribuicao -> . FORDO
    (43) Atribuicao -> . PRINTER
    (44) Atribuicao -> . SCANNER
    (45) IFELSE -> . IF ( ExprR ) { Atribuicoes } ELSE { Atribuicoes }
    (46) ONLYIF -> . IF ( ExprR ) { Atribuicoes }
    (47) FORDO -> . FOR ( Atribuicao , ExprR ) DO { Atribuicoes }
    (52) FUNC -> . NOME ( ARGS ) { Atribuicoes }
    (53) FUNC -> . NOME ( ARGS ) { NEWLINE Atribuicoes NEWLINE }
    (55) PRINTER -> . PRINT ( TEXTO )
    (56) PRINTER -> . PRINT ( id )
    (57) SCANNER -> . SCAN ( id )
    (26) Expr -> . Expr OU Termo
    (28) Expr -> . Termo
    (29) Expr -> . Expr + Termo
    (30) Expr -> . Expr - Termo
    (31) Expr -> . Termo * Factor
    (32) Expr -> . Termo / Factor
    (25) Termo -> . Termo E Factor
    (33) Termo -> . Factor
    (13) Factor -> . num
    (14) Factor -> . - num
    (15) Factor -> . id
    (16) Factor -> . TRUE
    (17) Factor -> . FALSE
    (18) Factor -> . ( ExprR )

    INT             shift and go to state 13
    id              shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 17
    NOME            shift and go to state 18
    PRINT           shift and go to state 19
    SCAN            shift and go to state 20
    num             shift and go to state 24
    -               shift and go to state 22
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    (               shift and go to state 16

    Comandos                       shift and go to state 1
    Comando                        shift and go to state 2
    ExprR                          shift and go to state 3
    Declaracao                     shift and go to state 4
    Atribuicao                     shift and go to state 5
    IFELSE                         shift and go to state 6
    ONLYIF                         shift and go to state 7
    FORDO                          shift and go to state 8
    FUNC                           shift and go to state 9
    PRINTER                        shift and go to state 10
    SCANNER                        shift and go to state 11
    Expr                           shift and go to state 12
    Termo                          shift and go to state 21
    Factor                         shift and go to state 23

state 1

    (0) S' -> Comandos .
    (2) Comandos -> Comandos . Comando
    (3) Comando -> . ExprR
    (4) Comando -> . Declaracao
    (5) Comando -> . Atribuicao
    (6) Comando -> . Atribuicao NEWLINE
    (7) Comando -> . IFELSE
    (8) Comando -> . ONLYIF
    (9) Comando -> . FORDO
    (10) Comando -> . FUNC
    (11) Comando -> . PRINTER
    (12) Comando -> . SCANNER
    (19) ExprR -> . Expr < Expr
    (20) ExprR -> . Expr > Expr
    (21) ExprR -> . Expr < = Expr
    (22) ExprR -> . Expr > = Expr
    (23) ExprR -> . Expr EQUALS Expr
    (24) ExprR -> . Expr NOTEQUALS Expr
    (27) ExprR -> . Expr
    (34) Declaracao -> . INT id
    (35) Atribuicao -> . id = ExprR
    (41) Atribuicao -> . ONLYIF
    (42) Atribuicao -> . FORDO
    (43) Atribuicao -> . PRINTER
    (44) Atribuicao -> . SCANNER
    (45) IFELSE -> . IF ( ExprR ) { Atribuicoes } ELSE { Atribuicoes }
    (46) ONLYIF -> . IF ( ExprR ) { Atribuicoes }
    (47) FORDO -> . FOR ( Atribuicao , ExprR ) DO { Atribuicoes }
    (52) FUNC -> . NOME ( ARGS ) { Atribuicoes }
    (53) FUNC -> . NOME ( ARGS ) { NEWLINE Atribuicoes NEWLINE }
    (55) PRINTER -> . PRINT ( TEXTO )
    (56) PRINTER -> . PRINT ( id )
    (57) SCANNER -> . SCAN ( id )
    (26) Expr -> . Expr OU Termo
    (28) Expr -> . Termo
    (29) Expr -> . Expr + Termo
    (30) Expr -> . Expr - Termo
    (31) Expr -> . Termo * Factor
    (32) Expr -> . Termo / Factor
    (25) Termo -> . Termo E Factor
    (33) Termo -> . Factor
    (13) Factor -> . num
    (14) Factor -> . - num
    (15) Factor -> . id
    (16) Factor -> . TRUE
    (17) Factor -> . FALSE
    (18) Factor -> . ( ExprR )

    INT             shift and go to state 13
    id              shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 17
    NOME            shift and go to state 18
    PRINT           shift and go to state 19
    SCAN            shift and go to state 20
    num             shift and go to state 24
    -               shift and go to state 22
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    (               shift and go to state 16

    Comando                        shift and go to state 27
    ExprR                          shift and go to state 3
    Declaracao                     shift and go to state 4
    Atribuicao                     shift and go to state 5
    IFELSE                         shift and go to state 6
    ONLYIF                         shift and go to state 7
    FORDO                          shift and go to state 8
    FUNC                           shift and go to state 9
    PRINTER                        shift and go to state 10
    SCANNER                        shift and go to state 11
    Expr                           shift and go to state 12
    Termo                          shift and go to state 21
    Factor                         shift and go to state 23

state 2

    (1) Comandos -> Comando .

    INT             reduce using rule 1 (Comandos -> Comando .)
    id              reduce using rule 1 (Comandos -> Comando .)
    IF              reduce using rule 1 (Comandos -> Comando .)
    FOR             reduce using rule 1 (Comandos -> Comando .)
    NOME            reduce using rule 1 (Comandos -> Comando .)
    PRINT           reduce using rule 1 (Comandos -> Comando .)
    SCAN            reduce using rule 1 (Comandos -> Comando .)
    num             reduce using rule 1 (Comandos -> Comando .)
    -               reduce using rule 1 (Comandos -> Comando .)
    TRUE            reduce using rule 1 (Comandos -> Comando .)
    FALSE           reduce using rule 1 (Comandos -> Comando .)
    (               reduce using rule 1 (Comandos -> Comando .)
    $end            reduce using rule 1 (Comandos -> Comando .)


state 3

    (3) Comando -> ExprR .

    INT             reduce using rule 3 (Comando -> ExprR .)
    id              reduce using rule 3 (Comando -> ExprR .)
    IF              reduce using rule 3 (Comando -> ExprR .)
    FOR             reduce using rule 3 (Comando -> ExprR .)
    NOME            reduce using rule 3 (Comando -> ExprR .)
    PRINT           reduce using rule 3 (Comando -> ExprR .)
    SCAN            reduce using rule 3 (Comando -> ExprR .)
    num             reduce using rule 3 (Comando -> ExprR .)
    -               reduce using rule 3 (Comando -> ExprR .)
    TRUE            reduce using rule 3 (Comando -> ExprR .)
    FALSE           reduce using rule 3 (Comando -> ExprR .)
    (               reduce using rule 3 (Comando -> ExprR .)
    $end            reduce using rule 3 (Comando -> ExprR .)


state 4

    (4) Comando -> Declaracao .

    INT             reduce using rule 4 (Comando -> Declaracao .)
    id              reduce using rule 4 (Comando -> Declaracao .)
    IF              reduce using rule 4 (Comando -> Declaracao .)
    FOR             reduce using rule 4 (Comando -> Declaracao .)
    NOME            reduce using rule 4 (Comando -> Declaracao .)
    PRINT           reduce using rule 4 (Comando -> Declaracao .)
    SCAN            reduce using rule 4 (Comando -> Declaracao .)
    num             reduce using rule 4 (Comando -> Declaracao .)
    -               reduce using rule 4 (Comando -> Declaracao .)
    TRUE            reduce using rule 4 (Comando -> Declaracao .)
    FALSE           reduce using rule 4 (Comando -> Declaracao .)
    (               reduce using rule 4 (Comando -> Declaracao .)
    $end            reduce using rule 4 (Comando -> Declaracao .)


state 5

    (5) Comando -> Atribuicao .
    (6) Comando -> Atribuicao . NEWLINE

    INT             reduce using rule 5 (Comando -> Atribuicao .)
    id              reduce using rule 5 (Comando -> Atribuicao .)
    IF              reduce using rule 5 (Comando -> Atribuicao .)
    FOR             reduce using rule 5 (Comando -> Atribuicao .)
    NOME            reduce using rule 5 (Comando -> Atribuicao .)
    PRINT           reduce using rule 5 (Comando -> Atribuicao .)
    SCAN            reduce using rule 5 (Comando -> Atribuicao .)
    num             reduce using rule 5 (Comando -> Atribuicao .)
    -               reduce using rule 5 (Comando -> Atribuicao .)
    TRUE            reduce using rule 5 (Comando -> Atribuicao .)
    FALSE           reduce using rule 5 (Comando -> Atribuicao .)
    (               reduce using rule 5 (Comando -> Atribuicao .)
    $end            reduce using rule 5 (Comando -> Atribuicao .)
    NEWLINE         shift and go to state 28


state 6

    (7) Comando -> IFELSE .

    INT             reduce using rule 7 (Comando -> IFELSE .)
    id              reduce using rule 7 (Comando -> IFELSE .)
    IF              reduce using rule 7 (Comando -> IFELSE .)
    FOR             reduce using rule 7 (Comando -> IFELSE .)
    NOME            reduce using rule 7 (Comando -> IFELSE .)
    PRINT           reduce using rule 7 (Comando -> IFELSE .)
    SCAN            reduce using rule 7 (Comando -> IFELSE .)
    num             reduce using rule 7 (Comando -> IFELSE .)
    -               reduce using rule 7 (Comando -> IFELSE .)
    TRUE            reduce using rule 7 (Comando -> IFELSE .)
    FALSE           reduce using rule 7 (Comando -> IFELSE .)
    (               reduce using rule 7 (Comando -> IFELSE .)
    $end            reduce using rule 7 (Comando -> IFELSE .)


state 7

    (8) Comando -> ONLYIF .
    (41) Atribuicao -> ONLYIF .

  ! reduce/reduce conflict for INT resolved using rule 8 (Comando -> ONLYIF .)
  ! reduce/reduce conflict for id resolved using rule 8 (Comando -> ONLYIF .)
  ! reduce/reduce conflict for IF resolved using rule 8 (Comando -> ONLYIF .)
  ! reduce/reduce conflict for FOR resolved using rule 8 (Comando -> ONLYIF .)
  ! reduce/reduce conflict for NOME resolved using rule 8 (Comando -> ONLYIF .)
  ! reduce/reduce conflict for PRINT resolved using rule 8 (Comando -> ONLYIF .)
  ! reduce/reduce conflict for SCAN resolved using rule 8 (Comando -> ONLYIF .)
  ! reduce/reduce conflict for num resolved using rule 8 (Comando -> ONLYIF .)
  ! reduce/reduce conflict for - resolved using rule 8 (Comando -> ONLYIF .)
  ! reduce/reduce conflict for TRUE resolved using rule 8 (Comando -> ONLYIF .)
  ! reduce/reduce conflict for FALSE resolved using rule 8 (Comando -> ONLYIF .)
  ! reduce/reduce conflict for ( resolved using rule 8 (Comando -> ONLYIF .)
  ! reduce/reduce conflict for $end resolved using rule 8 (Comando -> ONLYIF .)
    INT             reduce using rule 8 (Comando -> ONLYIF .)
    id              reduce using rule 8 (Comando -> ONLYIF .)
    IF              reduce using rule 8 (Comando -> ONLYIF .)
    FOR             reduce using rule 8 (Comando -> ONLYIF .)
    NOME            reduce using rule 8 (Comando -> ONLYIF .)
    PRINT           reduce using rule 8 (Comando -> ONLYIF .)
    SCAN            reduce using rule 8 (Comando -> ONLYIF .)
    num             reduce using rule 8 (Comando -> ONLYIF .)
    -               reduce using rule 8 (Comando -> ONLYIF .)
    TRUE            reduce using rule 8 (Comando -> ONLYIF .)
    FALSE           reduce using rule 8 (Comando -> ONLYIF .)
    (               reduce using rule 8 (Comando -> ONLYIF .)
    $end            reduce using rule 8 (Comando -> ONLYIF .)
    NEWLINE         reduce using rule 41 (Atribuicao -> ONLYIF .)

  ! INT             [ reduce using rule 41 (Atribuicao -> ONLYIF .) ]
  ! id              [ reduce using rule 41 (Atribuicao -> ONLYIF .) ]
  ! IF              [ reduce using rule 41 (Atribuicao -> ONLYIF .) ]
  ! FOR             [ reduce using rule 41 (Atribuicao -> ONLYIF .) ]
  ! NOME            [ reduce using rule 41 (Atribuicao -> ONLYIF .) ]
  ! PRINT           [ reduce using rule 41 (Atribuicao -> ONLYIF .) ]
  ! SCAN            [ reduce using rule 41 (Atribuicao -> ONLYIF .) ]
  ! num             [ reduce using rule 41 (Atribuicao -> ONLYIF .) ]
  ! -               [ reduce using rule 41 (Atribuicao -> ONLYIF .) ]
  ! TRUE            [ reduce using rule 41 (Atribuicao -> ONLYIF .) ]
  ! FALSE           [ reduce using rule 41 (Atribuicao -> ONLYIF .) ]
  ! (               [ reduce using rule 41 (Atribuicao -> ONLYIF .) ]
  ! $end            [ reduce using rule 41 (Atribuicao -> ONLYIF .) ]


state 8

    (9) Comando -> FORDO .
    (42) Atribuicao -> FORDO .

  ! reduce/reduce conflict for INT resolved using rule 9 (Comando -> FORDO .)
  ! reduce/reduce conflict for id resolved using rule 9 (Comando -> FORDO .)
  ! reduce/reduce conflict for IF resolved using rule 9 (Comando -> FORDO .)
  ! reduce/reduce conflict for FOR resolved using rule 9 (Comando -> FORDO .)
  ! reduce/reduce conflict for NOME resolved using rule 9 (Comando -> FORDO .)
  ! reduce/reduce conflict for PRINT resolved using rule 9 (Comando -> FORDO .)
  ! reduce/reduce conflict for SCAN resolved using rule 9 (Comando -> FORDO .)
  ! reduce/reduce conflict for num resolved using rule 9 (Comando -> FORDO .)
  ! reduce/reduce conflict for - resolved using rule 9 (Comando -> FORDO .)
  ! reduce/reduce conflict for TRUE resolved using rule 9 (Comando -> FORDO .)
  ! reduce/reduce conflict for FALSE resolved using rule 9 (Comando -> FORDO .)
  ! reduce/reduce conflict for ( resolved using rule 9 (Comando -> FORDO .)
  ! reduce/reduce conflict for $end resolved using rule 9 (Comando -> FORDO .)
    INT             reduce using rule 9 (Comando -> FORDO .)
    id              reduce using rule 9 (Comando -> FORDO .)
    IF              reduce using rule 9 (Comando -> FORDO .)
    FOR             reduce using rule 9 (Comando -> FORDO .)
    NOME            reduce using rule 9 (Comando -> FORDO .)
    PRINT           reduce using rule 9 (Comando -> FORDO .)
    SCAN            reduce using rule 9 (Comando -> FORDO .)
    num             reduce using rule 9 (Comando -> FORDO .)
    -               reduce using rule 9 (Comando -> FORDO .)
    TRUE            reduce using rule 9 (Comando -> FORDO .)
    FALSE           reduce using rule 9 (Comando -> FORDO .)
    (               reduce using rule 9 (Comando -> FORDO .)
    $end            reduce using rule 9 (Comando -> FORDO .)
    NEWLINE         reduce using rule 42 (Atribuicao -> FORDO .)

  ! INT             [ reduce using rule 42 (Atribuicao -> FORDO .) ]
  ! id              [ reduce using rule 42 (Atribuicao -> FORDO .) ]
  ! IF              [ reduce using rule 42 (Atribuicao -> FORDO .) ]
  ! FOR             [ reduce using rule 42 (Atribuicao -> FORDO .) ]
  ! NOME            [ reduce using rule 42 (Atribuicao -> FORDO .) ]
  ! PRINT           [ reduce using rule 42 (Atribuicao -> FORDO .) ]
  ! SCAN            [ reduce using rule 42 (Atribuicao -> FORDO .) ]
  ! num             [ reduce using rule 42 (Atribuicao -> FORDO .) ]
  ! -               [ reduce using rule 42 (Atribuicao -> FORDO .) ]
  ! TRUE            [ reduce using rule 42 (Atribuicao -> FORDO .) ]
  ! FALSE           [ reduce using rule 42 (Atribuicao -> FORDO .) ]
  ! (               [ reduce using rule 42 (Atribuicao -> FORDO .) ]
  ! $end            [ reduce using rule 42 (Atribuicao -> FORDO .) ]


state 9

    (10) Comando -> FUNC .

    INT             reduce using rule 10 (Comando -> FUNC .)
    id              reduce using rule 10 (Comando -> FUNC .)
    IF              reduce using rule 10 (Comando -> FUNC .)
    FOR             reduce using rule 10 (Comando -> FUNC .)
    NOME            reduce using rule 10 (Comando -> FUNC .)
    PRINT           reduce using rule 10 (Comando -> FUNC .)
    SCAN            reduce using rule 10 (Comando -> FUNC .)
    num             reduce using rule 10 (Comando -> FUNC .)
    -               reduce using rule 10 (Comando -> FUNC .)
    TRUE            reduce using rule 10 (Comando -> FUNC .)
    FALSE           reduce using rule 10 (Comando -> FUNC .)
    (               reduce using rule 10 (Comando -> FUNC .)
    $end            reduce using rule 10 (Comando -> FUNC .)


state 10

    (11) Comando -> PRINTER .
    (43) Atribuicao -> PRINTER .

  ! reduce/reduce conflict for INT resolved using rule 11 (Comando -> PRINTER .)
  ! reduce/reduce conflict for id resolved using rule 11 (Comando -> PRINTER .)
  ! reduce/reduce conflict for IF resolved using rule 11 (Comando -> PRINTER .)
  ! reduce/reduce conflict for FOR resolved using rule 11 (Comando -> PRINTER .)
  ! reduce/reduce conflict for NOME resolved using rule 11 (Comando -> PRINTER .)
  ! reduce/reduce conflict for PRINT resolved using rule 11 (Comando -> PRINTER .)
  ! reduce/reduce conflict for SCAN resolved using rule 11 (Comando -> PRINTER .)
  ! reduce/reduce conflict for num resolved using rule 11 (Comando -> PRINTER .)
  ! reduce/reduce conflict for - resolved using rule 11 (Comando -> PRINTER .)
  ! reduce/reduce conflict for TRUE resolved using rule 11 (Comando -> PRINTER .)
  ! reduce/reduce conflict for FALSE resolved using rule 11 (Comando -> PRINTER .)
  ! reduce/reduce conflict for ( resolved using rule 11 (Comando -> PRINTER .)
  ! reduce/reduce conflict for $end resolved using rule 11 (Comando -> PRINTER .)
    INT             reduce using rule 11 (Comando -> PRINTER .)
    id              reduce using rule 11 (Comando -> PRINTER .)
    IF              reduce using rule 11 (Comando -> PRINTER .)
    FOR             reduce using rule 11 (Comando -> PRINTER .)
    NOME            reduce using rule 11 (Comando -> PRINTER .)
    PRINT           reduce using rule 11 (Comando -> PRINTER .)
    SCAN            reduce using rule 11 (Comando -> PRINTER .)
    num             reduce using rule 11 (Comando -> PRINTER .)
    -               reduce using rule 11 (Comando -> PRINTER .)
    TRUE            reduce using rule 11 (Comando -> PRINTER .)
    FALSE           reduce using rule 11 (Comando -> PRINTER .)
    (               reduce using rule 11 (Comando -> PRINTER .)
    $end            reduce using rule 11 (Comando -> PRINTER .)
    NEWLINE         reduce using rule 43 (Atribuicao -> PRINTER .)
